z-index fixing

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -68,7 +68,7 @@ $bootstrap-blue: #0069D9;
         position: absolute;
         top: 0px;
         left: 50px;
-        z-index: 300;
+        z-index: 8;
 
         background-color: #fff;
         border: 1px solid $grayline;
