--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -182,7 +182,7 @@ $breakpoint-phone: 575px;
   height: 200px;
   width: 300px;
   margin: auto;
-  z-index: 10;
+  z-index: 8;
   background-image: url('mercator-map.png');
   background-size: 300px 200px;
   background-repeat: no-repeat;
